# Skyborn

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CI_STATUS.md  DEVELOPMENT.md  GRIDFILL_OPTIMIZATION_SUMMARY.md  LICENSE  LICENSE.txt  MANIFEST.in  PRE_COMMIT_SIMPLIFICATION.md  README.md  build_wheel.py  cross-platform.txt  cross_mingw.txt  double_precision_summary.md  environment.yml  install_helper.py  meson.build  meson_options.txt  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  set_version.py  setup.py  setup_dev.py  spherepack-f2pywrappers.f  spherepackmodule.c  test_coverage_supplement.py  test_final_coverage.py  test_requirements.txt  wrap_lon_data.py  双精度分析报告.md
.github/: dependabot.yml
src/skyborn/calc/GPI/: __init__.py  core.py  interface.py  meson.build  tropical_cyclone_potential_intensity_module.c  xarray.py
src/skyborn/calc/GPI/fortran/: debug_cape_comparison.f90  diagnose_cape_detail.f90  pcmin.f90  tcpypi_functions.f90  test_pcmin.f90  test_pcmin_standalone.f90  tropical_cyclone_potential_intensity.f90  tropical_cyclone_potential_intensity.pyf  tropical_cyclone_potential_intensity_bindings.f90  tropical_cyclone_potential_intensity_fixed.f90  tropical_cyclone_potential_intensity_tcpypi.f90  tropical_cyclone_potential_intensity_with_duplicates.f90
src/skyborn/calc/GPI/fortran/archive/: pcmin_2013.f  tcpypi_functions.f90  (+1 more)
src/skyborn/calc/dcape/: __init__.py  core.py  dcape_core_module.c  meson.build
src/skyborn/calc/dcape/fortran/: dcape.f90  dcape_bindings.f90
src/skyborn/calc/geostrophic/: __init__.py  core.py  geostrophicwind_module.c  interface.py  meson.build  xarray.py
src/skyborn/calc/geostrophic/fortran/: README.md  z2geouv.f90  z2geouv.pyf  z2geouv_backup.f90  z2geouv_bindings.f90  z2geouv_dp.f  z2geouv_sp.f90
src/skyborn/calc/growth_rate/: __init__.py  core.py  growth_rate_kernels_module.c  meson.build
src/skyborn/calc/growth_rate/fortran/: epslon.f90  growth_rate_kernels.f90  growth_rate_kernels.pyf  growth_rate_kernels_bindings.f90  qzhes.f90  qzit.f90  qzval.f90
src/skyborn/calc/mann_kendall/: __init__.py  _compiled.py  bindings.py  core.py  mann_kendall_core_module.c  meson.build  partial.py  regression.py  variants.py
src/skyborn/calc/mann_kendall/fortran/: mann_kendall_core.f90  mann_kendall_core.pyf  mann_kendall_core_bindings.f90
src/skyborn/calc/mk_kernels/: meson.build
src/skyborn/calc/mk_kernels/fortran/: mk_kernels_backend.f90  mk_kernels_backend.pyf
src/skyborn/calc/troposphere/: __init__.py  core.py  meson.build  tropopause.py  tropopause_height_module.c  xarray.py
src/skyborn/calc/troposphere/fortran/: tropopause_height.f90  tropopause_height.pyf  tropopause_height_bindings.f90
src/skyborn/gridfill/: GRIDFILL_UPGRADE_INTEGRATION_REPORT.md  __init__.py  _gridfill.c  _gridfill.pyx  gridfill.py  meson.build  xarray.py
src/skyborn/gridfill/tests/: __init__.py  _gridfill_backup.pyx  test_fill.py  test_fill_cube.py
src/skyborn/interp/: __init__.py  errors.py  grid2triple_module.c  int2p_kernels_module.c  interpolation.py  isentropic_kernels_module.c  meson.build  missing_values.py  rcm2points.py  rcm2points_module.c  rcm2rgrid.py  rcm2rgrid_module.c  regrid_module.c  regridding.py  triple2grid_module.c  triple_to_grid.py  vinth2p_kernels_module.c
src/skyborn/interp/cdo/: UPSTREAM.md
src/skyborn/interp/cdo/src/: cellsearch_reg2d.cc  nanoflann.hpp  pointsearch_reg2d.h  rect_grid_search.cc  rect_grid_search.h
src/skyborn/interp/fortran/: grid2triple.f90  grid2triple.pyf  grid2triple_bindings.f90  int2p_kernels.f90  int2p_kernels.pyf  int2p_kernels_bindings.f90  isentropic_kernels.f90  isentropic_kernels.pyf  isentropic_kernels_bindings.f90  linint2.f90  linint2.pyf  linmsg_dp.f90  rcm2points.f90  rcm2points.pyf  rcm2points_bindings.f90  rcm2rgrid.f90  rcm2rgrid.pyf  rcm2rgrid_bindings.f90  rcm_geodesy.f90  triple2grid.f90  triple2grid.pyf  triple2grid_bindings.f90  vinth2p_backend.f90  vinth2p_backend.pyf  vinth2p_kernels.f90  vinth2p_kernels.pyf  vinth2p_kernels_bindings.f90
src/skyborn/interp/fortran/archive/: triple2grid.f  vinth2p_ecmwf.pyf
src/skyborn/plot/nclcurly_native/: __init__.py  _ncl_curly_core.c  meson.build
src/skyborn/spharm/: LICENSE.spherepack  README.md  README_f2py.md  __init__.py  _dispatch.py  _spherepack_module.c  _spherepack_reduced_module.c  ectrans_backend_api.py  fix_f2py_symbols.py  meson.build  reduced_gaussian.py  spharm_old.py  spherical_harmonics.py  spherical_harmonics.py.disable
src/skyborn/spharm/ectrans/: GSTATS.F90  LDFOU2_MOD.F90  PARKIND1.F90  PREPSNM_MOD.F90  PRFI1B_MOD.F90  SUWAVEDI_MOD.F90  TPM_CONSTANTS.F90  TPM_DIM.F90  TPM_DISTR.F90  TPM_FIELDS.F90  TPM_GEOMETRY.F90  UPDSPB_MOD.F90  UVTVD_MOD.F90  VD2UV_CTL_MOD.F90  VD2UV_MOD.F90  VDTUV_MOD.F90  YOMHOOK.F90  _ectrans_backend_module.c  ectrans_gridmeta.f90  ectrans_scalar.f90  ectrans_vector.f90  ldfou2_uv_scaling.f90  ledir_dgemm.f90  meson.build  poa1_to_vordiv.f90  runtime_state_mod.f90  uv_to_vordiv.f90  vd2uv_pilot_state_mod.f90  vd2uv_uv_block.f90  vordiv_to_uv.f90
src/skyborn/spharm/html/: help.html  index.html  module-tree.html  spharm.spharm.Spharmt-class.html  toc-everything.html  toc-spharm.spharm-module.html  toc.html
src/skyborn/spharm/src/: _spherepack.pyf  _spherepack_0715.pyf  _spherepack_core.pyf  _spherepack_f90.pyf  _spherepack_f90_simple.pyf  alf.f90  gaqd.f90  getlegfunc.f90  hrfft.f90  ihgeod.f90  invlap.f90  lap.f  lap.f90  multsmoothfact.f90  onedtotwod.f90  onedtotwod_div.f90  onedtotwod_vrt.f90  onedtotwod_vrtdiv.f90  reduced_bindings.f90  reduced_gaussian_scalar.f90  shaec.f90  shaes.f90  shagc.f90  shags.f90  shsec.f90  shses.f90  shsgc.f90  shsgs.f90  specintrp.f90  sphcom.f90  spherepack.pyf  spherepack_bindings.f90  spherepack_f90.pyf  twodtooned.f90  twodtooned_div.f90  twodtooned_vrt.f90  twodtooned_vrtdiv.f90  vhaec.f90  vhaes.f90  vhaesdiv.f90  (+6 more)
src/skyborn/spharm/src/fortran/: analyze_f90_calls.py  build_split_pyf.py  f90_call_analysis.txt  hrfft_backup.f90  sphcom_backup.f90
(+299 files in other folders)
