[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyborn"
dynamic = ["version", "dependencies"] # 添加 dependencies 到动态列表
description = "Atmospheric science research utilities"
authors = [{ name = "Qianye Su", email = "suqianye2000@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "skyborn.__version__" }
dependencies = { file = ["requirements.txt"] }
