[build-system]
requires = [
    "meson-python>=0.12.0",
    "meson>=0.64.0",
    "ninja>=1.8.2",
    "numpy>=1.23.0",  # Required for f2py without distutils
    "wheel",
    "setuptools"  # fallback for development
]
build-backend = "mesonpy"

[project]
name = "skyborn"
version = "0.3.8"  # Synchronized with src/skyborn/_version.py
description = "Atmospheric science research utilities"
readme = "README.md"
authors = [{ name = "Qianye Su", email = "suqianye2000@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.0",  # Required for f2py without distutils
    "xarray",
    "matplotlib",
    "seaborn",
    # "cartopy",  # Skip cartopy for now due to compilation issues
    "netCDF4",
    "metpy",
    "tqdm",
    "statsmodels",
    "scipy",
    "cfgrib",
    "eccodes",
    "scikit-learn",
]
keywords = [
    "atmospheric-science",
    "meteorology",
    "climate",
    "data-analysis",
    "grib",
    "netcdf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "bandit",
    "pydocstyle",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-book-theme>=1.0.0",
    "myst-nb>=0.17.0",
    "sphinx-autodoc-typehints>=1.0.0",
    "sphinx-copybutton>=0.5.0",
    "jupyter-book>=0.15.0",
    "toml>=0.10.0",
]

[project.urls]
"Homepage" = "https://github.com/QianyeSu/Skyborn"
"Documentation" = "https://skyborn.readthedocs.io/"
"Repository" = "https://github.com/QianyeSu/Skyborn"
"Bug Reports" = "https://github.com/QianyeSu/Skyborn/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=skyborn --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["skyborn"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "metpy.*",
    "cartopy.*",
    "netCDF4.*",
    "xarray.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true
